# nes-chr

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: chr.cpp  chr.h  header.cpp  header.h  rom.cpp  rom.h  sprite.cpp  sprite.h
src/engine/: engine.cpp  engine.h
src/events/: eventlistener.cpp  eventlistener.h  keyboardevent.h  mouseevent.h
src/gfx/: color.cpp  color.h  colorpicker.cpp  colorpicker.h  palette.cpp  palette.h  pos.cpp  pos.h  rect.cpp  rect.h  renderer.cpp  renderer.h  spriteeditor.cpp  spriteeditor.h  spritepicker.cpp  spritepicker.h  textgenerator.cpp  textgenerator.h  texture.cpp  texture.h
src/views/: paintview.cpp  paintview.h  view.cpp  view.h
src/widgets/: colorpicker.cpp  colorpicker.h  spriteeditor.cpp  spriteeditor.h  spritepicker.cpp  spritepicker.h
